layout fixes, better default API

--- a/voca/firefox/popup.html
+++ b/voca/firefox/popup.html
@@ -21,33 +21,41 @@
 				display:flex;
 				flex-direction:column;
 			}
+			div, button, select{
+				margin-top:10px;
+				margin-bottom:10px;
+			}
+			textarea{
+				height:150px;
+			}
+			.mr10{
+				margin-right:10px;
+			}
+			
 		</style>
 		<script src="popup.js"></script>
 	</head>
 	<body>
 		<div class="popup-cont">
-			<h1 class="popup-row">Unofficial LibreTranslate Firefox Extension</h1>
+			<h3 class="popup-row">Unofficial LibreTranslate Extension</h3>
 			<div class="popup-row">
 				To translate a passage highlight it with your cursor and hold the Alt key.
 			</div>
-			<div class="popup-row">
-				<div class="flex">
+			<div class="popup-row" width="100%">
+				<div class="flex mr10" style="flex-basis:50%">
 					<select class="popup-col" id="source-lang">
 					</select>
 					<textarea class="popup-col" id="source-lang-text"></textarea>
 				</div>
-				<div class="flex">
+				<div class="flex" style="flex-basis:50%">
 					<select class="popup-col" id="target-lang">
 					</select>
 					<textarea class="popup-col" id="target-lang-text"></textarea>
 				</div>
 			</div>
-			<div class="popup-row">
-				<div class="flex">
-					<button class="popup-col" id="settings">Extension Settings</button>
-					<button class="popup-col" id="translate-page">Translate Entire Page</button>
-				</div>
-			</div>
+			<button class="popup-col" id="settings">Extension Settings</button>
+			<button class="popup-col" id="translate-page">Translate Entire Page</button>
+
 		</div>
 	<body>
 </html>
