--- a/voca/firefox/options.html
+++ b/voca/firefox/options.html
@@ -3,6 +3,15 @@
 	<head>
 		<meta charset="utf8">
 		<script src="options.js"></script>
+		<style>
+			div{
+				margin-top:10px;
+				margin-bottom:10px;
+			}
+			label{
+				margin-right:20px;
+			}
+		</style>
 	</head>
 	<body>
 		<h1>Options Page</h1>
@@ -11,11 +20,13 @@
 			<div>
 				<label>API URL</label>
 				<input type="text" id="api-url">
+				<a href="https://github.com/LibreTranslate/LibreTranslate#mirrors">Public API List</a>
 			</div>
 
 			<div>
 				<label>API Port</label>
 				<input type="number" id="api-port" min="0" max="65535">
+				<span>http: 80, https: 443, testing/local: 5000</span>
 			</div>
 
 			<div>
