--- a/voca/firefox/options.html
+++ b/voca/firefox/options.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf8">
+		<script src="common.js"></script>
 		<script src="options.js"></script>
 		<style>
 			div{
@@ -39,7 +40,7 @@
 				<input type="color" id="highlight-color">
 			</div>
 			
-			<div>
+			<div style="display:none">
 				<label>Translation Hotkey</label>
 				<input type="text" id="translation-hotkey">
 			</div>
