--- a/voca/firefox/popup.html
+++ b/voca/firefox/popup.html
@@ -55,7 +55,7 @@
 				</div>
 			</div>
 			<button class="popup-col" id="settings">Extension Settings</button>
-			<button class="popup-col" id="translate-page">Translate Entire Page</button>
+			<button class="popup-col" id="translate-page" disabled>Translate Entire Page</button>
 
 		</div>
 	<body>
