better contrast for inline translations

--- a/voca/firefox/options.html
+++ b/voca/firefox/options.html
@@ -12,6 +12,10 @@
 			label{
 				margin-right:20px;
 			}
+			.default-inline-appearance{
+				background-color: #010101;
+				color: #00ff00;
+			}
 		</style>
 	</head>
 	<body>
@@ -38,6 +42,15 @@
 			<div>
 				<label>Translation Selection Highlight Color</label>
 				<input type="color" id="highlight-color">
+			</div>
+
+			<div>
+				<label>Translation Selection Highlight Color</label>
+				<input type="color" id="text-color">
+			</div>
+
+			<div>
+				<span id="inline-appearance" class="default-inline-appearance">Example Inline Translation Appearance</span>
 			</div>
 			
 			<div style="display:none">
