--- a/voca/firefox/options.html
+++ b/voca/firefox/options.html
@@ -15,6 +15,7 @@
 			.default-inline-appearance{
 				background-color: #010101;
 				color: #00ff00;
+				padding: 3px;
 			}
 		</style>
 	</head>
